[project]
name = "rcsa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.19",
    "langchain-openai>=0.3.6",
    "langfuse>=2.59.7",
    "langgraph>=0.2.74",
    "langgraph-cli[inmem]>=0.1.73",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.12",
    "ipykernel>=6.29.5",
    "ruff>=0.9.7",
]
